heroku deploy started but not fully implemented ...some erorrs on con

--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-#MY_PSQL_DBNAME= proman
-#MY_PSQL_USER= RED
-#MY_PSQL_HOST= localhost
-#MY_PSQL_PASSWORD= 479631
-
-MY_PSQL_DBNAME= proman2
-MY_PSQL_USER= zzz
+MY_PSQL_DBNAME= proman
+MY_PSQL_USER= RED
 MY_PSQL_HOST= localhost
-MY_PSQL_PASSWORD= stayFocused
+MY_PSQL_PASSWORD= 479631
+
+#MY_PSQL_DBNAME= proman2
+#MY_PSQL_USER= zzz
+#MY_PSQL_HOST= localhost
+#MY_PSQL_PASSWORD= stayFocused
